# EchoSub

./: .gitignore  CLEANUP_REPORT.md  CMakeLists.txt  CMakeLists_simple.txt  Info.plist  Info_simple_player.plist  README.md  README_SUBTITLES.md  check_whisper.sh  go.mod  go.sum  run_simple_player.sh  test_space_key.sh
cmd/echosub/: main.go
docs/: DRAG_DROP_FIX.md  FR-01_IMPROVEMENTS.md  INLINE_VIDEO_PLAYER.md  MEDIA_PLAYER.md  VIDEO_OPTIMIZATION.md
include/core/: audiodecoder.h  mediaplayer.h  simplemediaplayer.h  videodecoder.h
include/media/: ffmpegwrapper.h
include/ui/: controlspanel.h  mainwindow.h  videowidget.h
internal/media/: errors.go  ffmpeg.go  inline_player.go  player.go  types.go
internal/ui/: media_view.go
resources/icons/: icon.icns  icons.qrc
scripts/: install_deps_macos.sh  test_drag_drop.sh  test_ffmpeg.sh  test_inline_player.sh  test_media_player.sh  test_player.sh  test_video_optimization.sh
src/: main.cpp  simple_player_test.cpp
src/core/: WhisperModelSettingsDialog.cpp  WhisperModelSettingsDialog.h  audiodecoder.cpp  mediaplayer.cpp  simplemediaplayer.cpp  simplemediaplayer.h  videodecoder.cpp
src/media/: ffmpegwrapper.cpp
src/ui/: controlspanel.cpp  mainwindow.cpp  videowidget.cpp
tools/whisper/: extract_audio.sh  whisper
